# starter-template

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: test.yml
app/: forms.py  settings.py  urls.py  views.py
app/teams/: models.py
app/teams/migrations/: 0001_initial.py  0002_initial.py
app/users/: models.py  views.py
app/users/migrations/: 0001_initial.py
scripts/: install
